cluster/images-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: images
spec:
  hosts:
    - images
  # This is an internal service, so is not announced to the gateway.
  # With no "gateways" field, the default applies: Make this service
  # known internally to every other service.
  http:
    - match:
        - uri:
            prefix: /api/v1/images
      rewrite:
        uri: /api/v1/images
      route:
        - destination:
            host: images
            port:
              number: 30001
